Add sections up to grisi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,59 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid" id="why">
-            <h2>preco to robime</h2>
+        <div class="container-fluid pb-75" id="why">
+            <div class="row">
+                <div class="col-2">
+                </div>
+                <div class="col-3">
+                    <h6 class="mb-3">NASE CIELE</h6>
+                    <h2 class="mb-5 display-4">Preco to robime</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dicta dignissimos, ducimus enim eos eveniet ex explicabo illum ipsum iusto laborum, magni molestias nostrum, optio quo repellendus rerum saepe velit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aspernatur aut blanditiis consequatur eius explicabo id illo, ipsam laboriosam magnam modi necessitatibus officia praesentium quidem quod, sint suscipit totam.</p>
+                </div>
+                <div class="col-1"></div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-5">
+                            <div class="card bg-w-rnd" style="width: 18rem;">
+                                <img class="card-img-top" src="./assets/workers-at-advert-agency-P9MBNPB.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <span class="badge badge-pill badge-info text-uppercase">Learning by doing</span>
+                                    <p class="card-text mt-3">"Nedostatok kvalifikovanej pracovnej sily"</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col pulled-back">
+                            <div class="card bg-w-rnd" style="width: 18rem;">
+                                <img class="card-img-top" src="./assets/02.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <span class="badge badge-pill badge-success text-uppercase">Sharing know-how</span>
+                                    <p class="card-text mt-3">"Lorem Ipsum dolor sit amet"</p>
+                                </div>
+                            </div>
+                            <div class="card bg-w-rnd mt-75" style="width: 18rem;">
+                                <img class="card-img-top" src="./assets/03.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <span class="badge badge-pill badge-dark text-uppercase">Talent accelerating</span>
+                                    <p class="card-text mt-3">"Lorem Ipsum dolor sit amet"</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid" id="grisi">
+            <div class="row justify-content-md-center">
+                <div class="col col-lg-4 slider-left">
+                    <img src="./assets/grisi.png" class="img-grisi" alt="">
+                    <img src="./assets/podpisy.png" class="img-podpisy" alt="">
+                </div>
+                <div class="col col-lg-6 slider-right">
+                    <h6 class="mb-3">ZAKLADAJUCI CLEN</h6>
+                    <h2 class="mb-5">Everything is possible</h2>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dignissimos eius et fuga id illo itaque, maiores nesciunt numquam, omnis quaerat quas quia quis quod, tempore temporibus tenetur ullam ut!</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
