Add newsletter section

--- a/themes/demo/pages/home.htm
+++ b/themes/demo/pages/home.htm
@@ -74,3 +74,12 @@ is_hidden = 0
         </div>
     </div>
 </div>
+<div class="container-fluid" id="newsletter">
+    <div class="row justify-content-md-center">
+            <div class="col-6 text-center">
+                <h6 class="mb-3">NEWSLETTER</h6>
+                <h2 class="mb-5 display-4">Dostavajte vzdy cerstve informacie</h2>
+                <p>todo formicka october</p>
+            </div>
+    </div>
+</div>
